4/5 particle animations are complete

--- a/ComputerGraphics.csproj
+++ b/ComputerGraphics.csproj
@@ -363,6 +363,7 @@
     <Compile Include="Assets\ImportedAssets\Cinemachine\Timeline\CinemachineTrack.cs" />
     <Compile Include="Assets\ImportedAssets\LightningBolt\LightningBoltScript.cs" />
     <Compile Include="Assets\MyAssets\Scripts\AnimationHandles\AnimationController.cs" />
+    <Compile Include="Assets\MyAssets\Scripts\ParticleScripts\FirehandParticleEffect.cs" />
     <Compile Include="Assets\MyAssets\Scripts\Shaders\Bleh.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -433,7 +434,9 @@
     <None Include="Assets\ImportedAssets\PostProcessing-2\PostProcessing\Shaders\Sampling.hlsl" />
     <None Include="Assets\ImportedAssets\PostProcessing-2\PostProcessing\Shaders\StdLib.hlsl" />
     <None Include="Assets\ImportedAssets\PostProcessing-2\PostProcessing\Shaders\xRLib.hlsl" />
+    <None Include="Assets\MyAssets\Notes\FireballNotes.txt" />
     <None Include="Assets\MyAssets\Notes\HadokenNotes.txt" />
+    <None Include="Assets\MyAssets\Notes\IceNotes.txt" />
     <None Include="Assets\MyAssets\Notes\Lightning Frames.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
